src/css/style.css
/* ... */
.fa-linkedin-in {
  box-shadow: 0 4px 4px 0 #fff1e6, 4px 0 4px 0 #fad2e1, 0 -4px 4px 0 #bee1e6,
    -4px 0 4px 0 #cddafd;
  background: -moz-linear-gradient(left, #fad2e1 0%, #e2ece9 100%);
  background: -webkit-linear-gradient(left, #fad2e1 0%, #e2ece9 100%);
  background: linear-gradient(to right, #fad2e1 0%, #e2ece9 100%);

  /* Use the text as a mask for the background. */
  /* This is for text/icon gradients. This will show the gradient as a text color rather than element bg. */
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}

.fa-twitter {
  box-shadow: 0 4px 4px 0 #fff1e6, 4px 0 4px 0 #fad2e1, 0 -4px 4px 0 #bee1e6,
    -4px 0 4px 0 #cddafd;
  background: -moz-linear-gradient(left, #bee1e6 0%, #f0efeb 100%);
  background: -webkit-linear-gradient(left, #bee1e6 0%, #f0efeb 100%);
  background: linear-gradient(to right, #bee1e6 0%, #f0efeb 100%);

  /* Use the text as a mask for the background. */
  /* This is for text/icon gradients. This will show the gradient as a text color rather than element bg. */
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}

.fa-paper-plane {
  box-shadow: 0 4px 4px 0 #fff1e6, 4px 0 4px 0 #fad2e1, 0 -4px 4px 0 #bee1e6,
    -4px 0 4px 0 #cddafd;
  background: -moz-linear-gradient(left, #f0efeb 0%, #dfe7fd 100%);
  background: -webkit-linear-gradient(left, #f0efeb 0%, #dfe7fd 100%);
  background: linear-gradient(to right, #f0efeb 0%, #dfe7fd 100%);

  /* Use the text as a mask for the background. */
  /* This is for text/icon gradients. This will show the gradient as a text color rather than element bg. */
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}

.fa-download {
  box-shadow: 0 4px 4px 0 #fff1e6, 4px 0 4px 0 #fad2e1, 0 -4px 4px 0 #bee1e6,
    -4px 0 4px 0 #cddafd;
  background: -moz-linear-gradient(left, #f0efeb 0%, #dfe7fd 100%);
  background: -webkit-linear-gradient(left, #f0efeb 0%, #dfe7fd 100%);
  background: linear-gradient(to right, #f0efeb 0%, #dfe7fd 100%);

  /* Use the text as a mask for the background. */
  /* This is for text/icon gradients. This will show the gradient as a text color rather than element bg. */
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}

.fa-node-js {
  box-shadow: 0 4px 4px 0 #fff1e6, 4px 0 4px 0 #fad2e1, 0 -4px 4px 0 #bee1e6,
    -4px 0 4px 0 #cddafd;
  background: -moz-linear-gradient(left, #f0efeb 0%, #dfe7fd 100%);
  background: -webkit-linear-gradient(left, #f0efeb 0%, #dfe7fd 100%);
  background: linear-gradient(to right, #f0efeb 0%, #dfe7fd 100%);

  /* Use the text as a mask for the background. */
  /* This is for text/icon gradients. This will show the gradient as a text color rather than element bg. */
  background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}

/* ------------------------ Tags ------------------------ */

/* Set up consitent styling */
.tags {
  display: flex;
  flex-direction: row;
  align-items: center;
}

/* Set up consistent spacing for each tag */
span {
  padding: 8px 24px;
  margin: 0 12px 0 0;
  border-radius: 24px;
  -webkit-border-radius: 24px;
  -moz-border-radius: 24px;
  -ms-border-radius: 24px;
  -o-border-radius: 24px;
}

.html_tag {
  border: 2px solid #fad2e1;
}

.css_tag {
  border: 2px solid #cddafd;
}

.git_tag {
  border: 2px solid #eae4e9;
}

.js_tag {
  border: 2px solid #fff1e6;
}

.api_tag {
  border: 2px solid #f0efeb;
}

/* ------------------------ Main Card Styling ------------------------ */

/* This styles the main 'busines card' card on each page */
.card {
  /* @include row-centred (); */
  display: flex;
  flex-direction: row;
  justify-content: center;

  background-color: white;
  border-radius: 24px;
  box-shadow: 0 2px 32px 0 #bee1e6; /* add $primary-color */
  width: 70%;
  height: 70%;
  -webkit-border-radius: 24px;
  -moz-border-radius: 24px;
  -ms-border-radius: 24px;
  -o-border-radius: 24px;
  transition: all 0.25s ease;
  z-index: 100 !important;
}
@media screen and (max-device-width: 1200px) {
  .card {
    display: none;
  }
  .mobile_card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100vw;
    height: auto;
    box-shadow: none;
    /* border: 2px solid pink; */
  }
  .mobile_card_home {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100vw;
    /* height: auto; */
    box-shadow: none;
    /* border: 2px solid pink; */
  }
}

.card.animate:hover {
  transform: translate3d(5px, -5px, -5px);
  -webkit-transform: translate3d(5px, -5px, -5px);
  -moz-transform: translate3d(5px, -5px, -5px);
  -ms-transform: translate3d(5px, -5px, -5px);
  -o-transform: translate3d(5px, -5px, -5px);
}

/* ------------------------ Home Page ------------------------ */

/* Overlay card to style help children */
.home_card {
  /* @include column-centred (); */
  display: flex;
  flex-direction: column;
  justify-content: center;

  align-items: center;
  align-content: space-between;
  width: 100%;
}
@media screen and (max-device-width: 1200px) {
  .mobile_home_card {
    /* @include column-centred (); */
    display: flex;
    flex-direction: column;
    justify-content: center;

    align-items: center;
    height: 100%;
    /* border: 1px solid green; */
  }
}
/* ... */

